@startuml
skinparam backgroundcolor transparent
skinparam shadowing false

scale 1.3

class User {
    <u>UserID: int</u>
    ..
    username: varchar(30) [unique]
    desc: varchar(300)
    gender: varchar(1)
    profilePicturePath: varchar(?)
    createdOn: dateTime
    --
    phoneNumber: varchar(15)
    email: varchar(254)
    --
    password: hashValue
    deleted: tinyint
    lastLogin: dateTime
    lastLoginTry: dateTime
    <w>permission: Permission</w>
}

class Post {
    <u>PostID</u>
    ..
    imagePath: varchar(60)
    title: varchar(30)
    desc: varchar(2000)
    postedOn: dateTime
    --
    <w>from: User</w>
    isDeleted: tinyint
}

class Category {
    <u>CategoryID</u>
    ..
    name: varchar(30) [unique]
    desc: varchar(300)
}

class Token {
    <u>TokenID</u>
    ..
    token: varchar(254)
    --
    <w>owner: User</w>
    created: dateTime
    valid_until: dateTime
}

class Follow {
    <u>FollowID</u>
    ..
    <w>owner: User</w>
    <w>follows: User</w>
}

class PostLiked {
    <u>PostLikedID</u>
    ..
    <w>Owner: User</w>
    <w>Post: Post</w>
}

class Permission {
    <u>PermissionID</u>
    ..
    name: varchar(30) [unique]
    canPost: boolean
    canLike: boolean
    canComment: boolean
    isAdmin: boolean
}

class PasswordReset {
    <u>PasswordResetID</u>
    ..
    uuid: varchar(60)
    code: number(4)
    created: dateTime
    validUntil: dateTime
}

class Comment {
    <u>CommentID</u>
    ..
    content: varchar(300)
    --
    <w>owner: User</w>
    <w>post: Post</w>
    isDeleted: tinyint
}

User "1" -- "*" Post
User "*" -- "1" Comment
User "1" -- "*" Token
User "2" -- "*" Follow
User "1" -- "*" PostLiked
User "*" -- "1" Permission
User "1" -- "*" PasswordReset

Post "1" -- "*" PostLiked
Post "1" -- "*" Comment
Post "*" -- "*" Category
(Post, Category) .. Post_Category

@enduml